修改模板，进行一些自定义调整

--- a/source/_posts/图片编辑器实战-上.md
+++ b/source/_posts/图片编辑器实战-上.md
@@ -3,6 +3,7 @@ title: 图片编辑器实战(上)
 date: 2020-11-12 11:42:08
 tags:
 author: 昊源
+summary: 在 Android 平台上实现图片编辑器首先需要进行一些技术方案的选型，我们选择的是基于 OpenGL 的技术方案，因此首先需要对 OpenGL 有一个基本的了解
 ---
 ## 1. 项目简介
 
