--- a/source/_posts/图片编辑器实战-下.md
+++ b/source/_posts/图片编辑器实战-下.md
@@ -3,6 +3,7 @@ title: 图片编辑器实战(下)
 date: 2020-11-12 11:42:20
 tags:
 author: 昊源
+summary: 在具备了 OpenGL 的理论基础后，剩下的就是在 Android 平台上进行应用了。结合具体的需求场景进行功能实现，比如图片编辑器中的马赛克、涂鸦、滤镜等等
 ---
 
 ## 1. 分层绘制
