解决图片未匹配上问题

--- a/source/_posts/图片编辑器实战-下.md
+++ b/source/_posts/图片编辑器实战-下.md
@@ -497,19 +497,19 @@ if (value == 0.0) {
 
 **一阶贝塞尔曲线：**
 
-![1pbm8g8qe6](1pbm8g8qe6.png)
+![1pbm8g8qe6](1pbm8g8qe6.jpg)
 
 ![4ttmh3k1mq](4ttmh3k1mq.png)
 
 **二阶贝塞尔曲线：**
 
-![1pjdzn40dq](1pjdzn40dq.png)
+![1pjdzn40dq](1pjdzn40dq.jpg)
 
 ![rdhb67vezo](rdhb67vezo.png)
 
 **三阶贝塞尔曲线：**
 
-![qesak0w6q5](qesak0w6q5.png)
+![qesak0w6q5](qesak0w6q5.jpg)
 
 ![7hlbv0b6c3](7hlbv0b6c3.png)
 
